RESOLVED FIXED287013
Fix release logging in UserMediaPermissionRequestManagerProxy::computeFilteredDeviceList
https://bugs.webkit.org/show_bug.cgi?id=287013
Summary Fix release logging in UserMediaPermissionRequestManagerProxy::computeFiltere...
youenn fablet
Reported 2025-02-04 04:52:54 PST
Fix release logging in UserMediaPermissionRequestManagerProxy::computeFilteredDeviceList
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-04 04:53:07 PST
youenn fablet
Comment 2 2025-02-04 04:55:42 PST
youenn fablet
Comment 3 2025-02-05 02:07:39 PST
EWS
Comment 4 2025-02-05 10:11:55 PST
Committed 289876@main (b56f878a0313): <https://commits.webkit.org/289876@main> Reviewed commits have been landed. Closing PR #40044 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.