Fix release logging in UserMediaPermissionRequestManagerProxy::computeFilteredDeviceList https://bugs.webkit.org/show_bug.cgi?id=287013 rdar://144154353

Reviewed by Eric Carlson.

We log the number of camera and microphone and we regressed the computation of these numbers.
This patch fixes it.

* Source/WebKit/UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
(WebKit::UserMediaPermissionRequestManagerProxy::computeFilteredDeviceList):

Canonical link: https://commits.webkit.org/289876@main